# jinja2_fsspec_loader

./: README.md  pyproject.toml
fsspec_loader/: __init__.py  fsspec_loader.py
