[tool.poetry]
name = "fsspec_loader"
version = "0.1.0"
description = ""
authors = ["rongfengliang <1141591465@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.4"
fsspec = "^2024.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
